Attempt to fix listof error